<resources>
    <string name="app_name">AppProjeto</string>
    <string name="title_activity_contatos">ContatosActivity</string>
    <string name="title_activity_musicas">MusicasActivity</string>
    <string name="title_activity_videos">VideosActivity</string>
    <string name="nome_contato">Nome</string>
    <string name="email_contato">E-mail</string>
    <string name="tirar_uma_foto">Tirar uma foto</string>
    <string name="url_foto">URL de uma foto</string>
    <string name="salvar">Salvar contato</string>
    <string name="preview">Preview:</string>
    <string name="carregar">Preview</string>
    <string name="ou">ou</string>
    <string name="title_activity_baixar_musicas">BaixarMusicas</string>
    <string name="title_activity_cadastro_musica">CadastroMusicaActivity</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="title_activity_baixar_videos">BaixarVideos</string>
    <string name="title_activity_video_player">VideoPlayer</string>
</resources>
