<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro_contato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.progavancada.appprojeto.CadastroContato">

    <EditText
        android:id="@+id/edt_nome_contato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_contato" />

    <EditText
        android:id="@+id/edt_email_contato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_contato" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <EditText
            android:id="@+id/edt_url_foto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/url_foto" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/carregar"
            android:layout_weight="2"
            android:id="@+id/btn_carregar_foto" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:gravity="right"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ou"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirar_uma_foto"
            android:id="@+id/btn_tirar_foto" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/semfoto"
            android:id="@+id/preview_foto"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:id="@+id/btn_salvar_contato"
            android:layout_marginTop="40dp"/>

    </LinearLayout>


</LinearLayout>
